# rust-language

./: Cargo.toml
src/: language_util.rs  lib.rs  main.rs
src/challenges/: benchmark_macros.rs  benchmark_macros_hold.rs  binary_tree_enum.rs  binary_tree_nested.rs  binary_tree_vector.rs  mod.rs  parallel_iterator.rs  use_trait_if_found.rs
src/modules/: any.rs  cell.rs  convert.rs  mem.rs  mod.rs  rc.rs
src/other/: include_test.txt  lifetime_for_botw.rs  macros.rs  mod.rs  operator.rs  pattern.rs  write_macros.rs
src/other_crates/: mod.rs  try_itertools.rs
src/traits/: copy.rs
src/types/: bool.rs  closure.rs  enum_type.rs  function.rs  mod.rs  never.rs  option.rs  result.rs  slice.rs  string.rs
