[package]
name = "language"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typename = "0.1.1"
util-rust = { path = "../util-rust" }
parallel-iterator = "0.1.5"
rand = "0.7"
rayon = "0.7.1"

